src/test/resources/nox/errors/err_null_access.nox
// @test:error "NullAccessError"
main() {
    string s = null;
    return s.length();
}
